force-app/main/default/objects/PromoCourt__c/PromoCourt__c.object-meta.xml
<CustomObject>
    <label>Promo Court</label>
    <nameField>
        <displayFormat>PC-{000000}</displayFormat>
        <label>Promo Court Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promo Court</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>