force-app/main/default/objects/PromoCourt__c/fields/PromoCourtBulk__c.field-meta.xml
<CustomField>
    <fullName>PromoCourtBulk__c</fullName>
    <label>Promo Court Bulk</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>