force-app/main/default/objects/PromoCourt__c/fields/PromoterDailyReport__c.field-meta.xml
<CustomField>
    <fullName>PromoterDailyReport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promoter Daily Report</label>
    <referenceTo>Promoter_Daily_Report__c</referenceTo>
    <relationshipLabel>Promo Court</relationshipLabel>
    <relationshipName>Promo_Court</relationshipName>
    <type>Lookup</type>
</CustomField>