force-app/main/default/objects/PromoCourt__c/fields/Research__c.field-meta.xml
<CustomField>
    <fullName>Research__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Research</label>
    <referenceTo>Research__c</referenceTo>
    <relationshipLabel>Promo Court</relationshipLabel>
    <relationshipName>Promo_Court</relationshipName>
    <type>Lookup</type>
</CustomField>