force-app/main/default/objects/PromoCourt__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>Promo Court</relationshipLabel>
    <relationshipName>Promo_Court</relationshipName>
    <type>Lookup</type>
</CustomField>